# examples

./: CMakeLists.txt  LICENSE  README.md
patches/: basic.pd  bizarre.pd  demo.pd  example.pd  hello.pd  ogg.pd  sample.pd
src/: CMakeLists.txt  main.cxx
src/basic/: CMakeLists.txt  main.cxx
src/demo/: CMakeLists.txt  conf.lua  defs.in.lua  main.lua
src/hello/: CMakeLists.txt  main.cxx
